--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "bootcamp",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": "10.15.1"
+  },
   "main": "index.js",
   "scripts": {
     "build": "webpack --config webpack.config.js --mode='production'"
