--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "engines": {
-    "node": "12.0.0"
+    "node": "14.17.3"
   },
   "main": "index.js",
   "scripts": {
-
+    "build": "webpack --config webpack.config.js --mode='production'"
   },
   "author": "",
   "license": "ISC",
