--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config webpack.config.js --mode='production'"
+    "start": "webpack --config webpack.config.js --mode='production'"
   },
   "author": "",
   "license": "ISC",
